<resources>
    <string name="app_name">Lekuak</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="cambiar_idioma">Cambiar idioma a Euskera</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="titulo_stats">Estadísticas</string>
    <string name="titulo_pendientes">Pendientes</string>
    <string name="titulo_visitas">Mis Visitas</string>
    <string name="mis_lugares">Mis lugares</string>
    <string name="anadir_lugar">Añadir lugar</string>
    <string name="nombre_del_lugar">Nombre del lugar</string>
    <string name="direccion_o_ubicacion">Dirección o ubicación</string>
    <string name="ver_en_mapa">Ver en mapa</string>
    <string name="categoria">Categoría</string>
    <string name="editar">Editar</string>
    <string name="nueva_visita">Registrar Visita</string>
    <string name="historial_visitas">Historial de Visitas</string>
    <string name="fecha_visita">Fecha de visita</string>
    <string name="valoracion">Valoración (1–5)</string>
    <string name="notas_visita">Comentario de la visita</string>
    <string name="estado_visitado">Visitado</string>
    <string name="estado_pendiente">Pendiente</string>
    <string name="resumen_de_lekuak">Resumen de Lekuak</string>
    <string name="total">Total de lugares: </string>
    <string name="visitados">Visitados: </string>
    <string name="nuevo_lugar">Nuevo Lugar</string>
    <string name="editar_lugar">Editar Lugar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="todos_los_lugares">Todos los lugares</string>
    <string name="eliminar_lugar">Eliminar lugar</string>
    <string name="mensaje_eliminar">¿Estás seguro de que quieres eliminar %1$s?</string>
    <string name="eliminar_visita">Eliminar visita</string>
    <string name="mensaje_eliminar_visita">¿Estás seguro de que deseas eliminar esta visita?</string>
    <string name="eliminar">Eliminar</string>
    <string name="notif_titulo">¡Nuevo lugar descubierto!</string>
    <string name="notif_cuerpo">Has añadido "%1$s" a tus Lekuak.</string>
    <string name="sobre_la_aplicacion">Sobre la aplicación:</string>
    <string name="crea_un_lugar_primero">Crea un lugar primero</string>
    <string name="valoracion_media">Valoración media: </string>
    <string name="lugar_top">Lugar más visitado: </string>
    <string name="ultima_visita">Última visita registrada: </string>
    <string name="sin_datos">Sin datos</string>

    <string-array name="categorias_array">
        <item>Restaurante</item>
        <item>Bar</item>
        <item>Tienda</item>
        <item>Naturaleza</item>
        <item>Cultura</item>
        <item>Ocio</item>
        <item>Otro</item>
    </string-array>
</resources>