<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen_de_lekuak"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvVisitados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visitados"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvValoracionMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valoracion_media"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvLugarTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugar_top"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvUltimaVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultima_visita"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

</LinearLayout>
